--- a/src/templates/partials/events.hbs
+++ b/src/templates/partials/events.hbs
@@ -1,23 +1,105 @@
 <div class="events">
-    <div class="event-feed-8922">
-        <h2>Upcoming Events</h2>
 
-        <div class="events__item" itemscope="itemscope" itemtype="http://schema.org/Event">
-            <p class="events__date-tile">JAN<span>24</span>2015</p>
-            <div class="events__content">
-                <p class="events__headline"><a href="http://bethel.edu/events/2015/options-in-health-sciences"><span itemprop="name">Options in Health Sciences</span></a></p>
-                <p><span itemprop="description">Explore majors andies to fulfilling careers.</span></p>
+
+
+<div class="event-feed-2450">
+        
+
+ 
+        
+                                        <h2 class="uppercase-underlined">Events</h2>
+                
+                 
+<div class="events__item" itemscope="itemscope" itemtype="https://schema.org/Event">
+    <p class="events__date-tile">
+
+                <!--start and end date are on the same day-->
+        <!--OR if the event hasn't started yet.-->
+        <!--THEN display the start date as the date.-->
+            
+                <!--Month-->
+                FEB
+
+                <!--Day-->
+                <span>14</span>
+
+                <!--Year-->
+                2016</p>
+
+                        <div class="events__content">
+                <!--Title + Link-->
+                <p class="events__headline"><a href="https://bethel.edu/events/2016/admissions/admitted-student-overnight"><span itemprop="name">Admitted Student Overnight Event</span></a>
+
+                    <!--Time + Location-->
+                                                                
+                                                                        </p><p class="events__location">5 p.m. | <span itemprop="location">Lundquist Community Life Center (CLC)</span></p>
+                                            
+         <!--Description-->
+                <p class="events__description"><span itemprop="description">Congrats, you're accepted! Stay overnight on campus to get a feel for what it's like to be a Bethel student.</span></p>
             </div>
-        </div>
-
-        <div class="events__item" itemscope="itemscope" itemtype="http://schema.org/Event">
-            <p class="events__date-tile">JAN<span>24</span>2015</p>
-            <div class="events__content">
-                <p class="events__headline"><a href="http://bethel.edu/events/2015/options-in-health-sciences"><span itemprop="name">Options in Health Sciences</span></a></p>
-                <p class="mb0">10 a.m.</p>
-                <p><span itemprop="description">Explore majors and learn more about Bethel’s opportunities in health sciences that lead to fulfilling careers.</span></p>
-            </div>
-        </div>
-
-    </div>
 </div>
+
+<div class="events__item" itemscope="itemscope" itemtype="https://schema.org/Event">
+    <p class="events__date-tile">
+
+                <!--start and end date are on the same day-->
+        <!--OR if the event hasn't started yet.-->
+        <!--THEN display the start date as the date.-->
+            
+                <!--Month-->
+                FEB
+
+                <!--Day-->
+                <span>20</span>
+
+                <!--Year-->
+                2016</p>
+
+                        <div class="events__content">
+                <!--Title + Link-->
+                <p class="events__headline"><a href="https://bethel.edu/events/2016/admissions/saturday-visit-day"><span itemprop="name">Saturday Visit Day</span></a>
+
+                    <!--Time + Location-->
+                                                                
+                                                                        </p><p class="events__location">10 a.m. | <span itemprop="location">Lundquist Community Life Center (CLC)</span></p>
+                                            
+         <!--Description-->
+                <p class="events__description"><span itemprop="description">Busy schedule? Visit Bethel on the weekend!</span></p>
+            </div>
+</div>
+
+<div class="events__item" itemscope="itemscope" itemtype="https://schema.org/Event">
+    <p class="events__date-tile">
+
+                <!--start and end date are on the same day-->
+        <!--OR if the event hasn't started yet.-->
+        <!--THEN display the start date as the date.-->
+            
+                <!--Month-->
+                MAR
+
+                <!--Day-->
+                <span>6</span>
+
+                <!--Year-->
+                2016</p>
+
+                        <div class="events__content">
+                <!--Title + Link-->
+                <p class="events__headline"><a href="https://bethel.edu/events/2016/admissions/admitted-student-overnight"><span itemprop="name">Admitted Student Overnight Event</span></a>
+
+                    <!--Time + Location-->
+                                                                
+                                                                        </p><p class="events__location">5 p.m. | <span itemprop="location">Lundquist Community Life Center (CLC)</span></p>
+                                            
+         <!--Description-->
+                <p class="events__description"><span itemprop="description">Congrats, you're accepted! Stay overnight on campus to get a feel for what it's like to be a Bethel student.</span></p>
+            </div>
+</div>
+ 
+        
+                                                
+                            <a class="btn center" href="http://www.bethel.edu/undergrad/admissions/visit/events">More Events</a>
+            
+    </div>
+    </div>
