--- a/src/css/post.css
+++ b/src/css/post.css
@@ -14,7 +14,6 @@
 @import "grid/layout.css";
 
 @import "global/header.css";
-@import "global/toolbox.css";
 @import "global/off-canvas--global.css";
 @import "global/navigation.css";
 @import "global/breadcrumb.css";
@@ -34,6 +33,7 @@
 @import "modules/maps.css";
 @import "modules/calendar.css";
 @import "modules/news.css";
+@import "modules/events.css";
 @import "modules/social-media.css";
 @import "modules/moving-picture.css";
 @import "modules/section--home.css";
@@ -48,7 +48,6 @@
 @import "enhance/animation.css";
 @import "enhance/big-steps.css";
 @import "enhance/buttons.css";
-@import "enhance/date-tag.css";
 @import "enhance/parallax.css";
 @import "enhance/proof-points.css";
 @import "enhance/search.css";
