--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -47,38 +47,27 @@ layout:default
 
 	{{!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.0/flickity.pkgd.min.js"></script>	 --}}
 
-	<script>
-	    function loadJS(u) {var r = document.getElementsByTagName("script")[0], s = document.createElement("script"); s.src = u; r.parentNode.insertBefore(s, r); }
-		loadJS("/js/boots.js");
-	    if (!window.HTMLPictureElement) {
-	        document.createElement('picture');
-	        window.picturefillCFG = window.picturefillCFG || [];
-	        picturefillCFG.push(["algorithm", "saveData"]);
-	        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.1/picturefill.min.js");
-	    };
-		// loadCSS("/css/boots.css", document.getElementById("loadcss"));
-		// loadCSS("https://cloud.typography.com/6664852/762926/css/fonts.css", document.getElementById("loadcss"));
-	</script>
+<script>
+    function loadJS(u) {var r = document.getElementsByTagName("script")[0], s = document.createElement("script"); s.src = u; r.parentNode.insertBefore(s, r); }
+    if (!window.HTMLPictureElement) {
+        document.createElement('picture');
+        window.picturefillCFG = window.picturefillCFG || [];
+        picturefillCFG.push(["algorithm", "saveData"]);
+        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.1/picturefill.min.js");
+    };
 
-	<script>
-		var cb = function() {
-			var l = document.createElement('link'); l.rel = 'stylesheet';
-			// l.href = 'css/boots.css';
-			var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-		};
-		var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-		webkitRequestAnimationFrame || msRequestAnimationFrame;
-		if (raf) raf(cb);
-		else window.addEventListener('load', cb);
+	var cb = function() {
+		var l = document.createElement('link'); l.rel = 'stylesheet';
+		l.href = 'https://cloud.typography.com/6664852/692222/css/fonts.css';
+		var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+	};
+	var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+	webkitRequestAnimationFrame || msRequestAnimationFrame;
+	if (raf) raf(cb);
+	else window.addEventListener('load', cb);
 
-		var cb2 = function() {
-			var m = document.createElement('link'); m.rel = 'stylesheet';
-			// m.href = 'https://cloud.typography.com/6664852/762926/css/fonts.css';
-			var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(m, h);
-		};
-		if (raf) raf(cb2);
-		else window.addEventListener('load', cb2);
-	</script>
-	<noscript><link href="https://cdn2.bethel.edu/css/boots.css" rel="stylesheet" /></noscript>
+    loadJS("https://www.bethel.edu/cdn/js/boots.js");
+</script>
+
 </body>
 </html>
