tweaking search btn spacing

--- a/src/templates/partials/global--school.hbs
+++ b/src/templates/partials/global--school.hbs
@@ -29,7 +29,7 @@
                <li><a href="#">Apply</a></li>
                <li><a href="#">Blink</a></li>
                <li><a href="#">Giving</a></li>
-               <li><a class="btn  btn-small  quick-links--search">Search</a></li>
+               <li><a class="btn  quick-links__search"><svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg> Search</a></li>
            </ul>
 
 {{!--            <form action="//www.bethel.edu/search/" class="search" id="cse-search-box" target="_blank">
