--- a/src/css/global/navigation.css
+++ b/src/css/global/navigation.css
@@ -115,6 +115,6 @@
     color: #fff !important;
 
     @mixin respond-min $large {
-        margin-top: .5em 0 !important;
+        margin: .5em 0 !important;
     }
 }
