--- a/src/css/modules/social-media.css
+++ b/src/css/modules/social-media.css
@@ -9,14 +9,17 @@
 		flex-direction: row;
 		align-items: center;
 	}
+}
 
-	a {
+.social-media a,
+.social-media__link {
 		white-space: nowrap;
 		margin-right: 1em;
 		margin-bottom: .25em;
 	}
 
-	.svg-icon {
+	.svg-icon,
+	.social-media__icon {
 		fill: $bethel--blue;
 		vertical-align: text-top;
 		margin-bottom: 0;
