updating social styles

--- a/src/css/modules/social-media.css
+++ b/src/css/modules/social-media.css
@@ -16,7 +16,7 @@
 		white-space: nowrap;
 		margin-right: 1em;
 		margin-bottom: .25em;
-	}
+		font-family: $gotham;
 
 	.svg-icon,
 	.social-media__icon {
@@ -31,4 +31,5 @@
 	margin-bottom: .25em;
 	font-weight: 500;
 	margin-right: 1em;
+	font-family: $gotham;
 }
