--- a/src/css/global/navigation.css
+++ b/src/css/global/navigation.css
@@ -7,7 +7,6 @@
 
     li {
         margin: 0;
-        font-size: .9em;
 
         @mixin respond-min $large {
             font-family: $gotham;
@@ -16,7 +15,11 @@
             padding: 0;
         }
 
-        @mixin respond-min $large {
+        @mixin respond-min $medium {
+            font-size: .9em;
+        }
+
+        @mixin respond-min $x-large {
             font-size: 1em;
         }
     }
