--- a/src/css/modules/section--apply.css
+++ b/src/css/modules/section--apply.css
@@ -4,12 +4,12 @@
 	margin: 0 auto;
 
 	@mixin respond-min $large {
-		/* padding: 0 3em; */
+		padding: 0 3em;
 		background: none;
 	}
 
 	@mixin respond-min 75em {
-		/* padding: 0 2em; */
+		padding: 0 2em;
 	}
 }
 
