--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -16,25 +16,25 @@
 
 
 		<div class="grid-section mt0" >
-		{{> moving-picture }}
+			{{> moving-picture }}
 		</div>
 
-		{{> section--apply }}
+		{{!-- {{> section--apply }} --}}
 
 
-		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
+{{!-- 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
 
 		<div class="inner--content">
 		    <div class="inner-wrap--site__navigation" id="js-inner-wrap--site__navigation">
 
 		    	{{> site__navigation }}
 
-		        {{> page__title }}
+		        {{> page__title }} --}}
 
 				{% body %}
 
-		    </div>
-		</div>
+{{!-- 		    </div>
+		</div> --}}
 
 				{{!-- {{> section--home__academics }} --}}
 
