--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -1,14 +1,16 @@
 ---
-title: HOMER
-layout: home
+title: HOME
+layout: default
 pageTitle: Test title
 ---
 
-<div class="main js-animate">
 
-    {{!-- {{> collapsible }} --}}
 
-    <section class="grid-section">
+    {{> section--apply }}
+
+    {{> request-info }}
+
+    <section class="grid-section  mv6">
         <div class="inner">
             <div class="grid">
                 <div class="grid-cell u-medium-1-2  pr4@medium">
@@ -21,18 +23,17 @@ pageTitle: Test title
         </div>
     </section>
 
-    <section class="grid-section">
+    <section class="grid-section  mv6">
         <div class="inner">
+
             <div class="grid">
-                <div class="grid-cell u-medium-1-2  pr4@medium">
-                    {{!-- <div class="medium-grid-pad-1x">{{> quotes }}</div> --}}
+                <div class="grid-cell">
+                    <div class="medium-grid-pad-1x">{{> quotes }}</div>
                 </div>
                 <div class="grid-cell">
-                    {{!-- <div class="medium-grid-pad-1x">{{> quotes }}</div> --}}
+                    <div class="medium-grid-pad-1x">{{> quotes }}</div>
                 </div>
             </div>
 
         </div>
     </section>
-    
-</div>
