--- a/src/templates/partials/section--apply.hbs
+++ b/src/templates/partials/section--apply.hbs
@@ -1,59 +1,58 @@
-<section class="grid-section ma0 pa0">
+<section class="grid-section  mt0  pv6  bkg--white">
 	<div class="grid false">
 		<!-- flex-layout-block 140 -->
-		<div class="grid-cell mh0">
+
+		<div class="grid-cell  mh0">
 			<div class=" medium-grid-pad-0x ">
 				<!-- html-block Blocks/Raw HTML -->
 				<section class="section--apply">
 					<div class="inner">
-						<div class="grid grid--wrap">
+						<h2 class="beta  mb1">A snappy title thing here</h2>
+						<p class="mb4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident labore a accusantium iste ullam recusandae exercitationem architecto ab nemo adipisci, temporibus, neque voluptas dolorum distinctio molestias veritatis aliquam fugit excepturi. Quod harum animi voluptatum voluptates atque placeat beatae illum dolor corporis, quasi deserunt dignissimos consectetur itaque, illo debitis sint. Dolore inventore eaque qui molestias nisi nam, minus obcaecati nesciunt perspiciatis?</p>
+						
+						<div class="grid  grid--wrap">
 							<div class="grid-cell u-small-1-2 u-medium-1-2 u-large-1-4">
-								<div class="section--apply__unit">
-									<a href="https://www.bethel.edu/admissions/contact">
-										<div class="center">
-											<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
-												<g data-iconmelon="Simple Line Icons:fb184cb4fb59727d7839f79c7a826661" id="bubble-speach">
+
+								<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
+									<g data-iconmelon="Simple Line Icons:fb184cb4fb59727d7839f79c7a826661" id="bubble-speach">
+										<g>
+											<g>
+												<g>
 													<g>
-														<g>
-															<g>
-																<g>
-																	<path d="M10.041,14.644c-1.379,0-2.501-1.122-2.501-2.502c0-1.379,1.122-2.501,2.501-2.501 s2.504,1.123,2.504,2.501C12.545,13.521,11.42,14.644,10.041,14.644z M10.041,10.787c-0.744,0-1.352,0.609-1.352,1.354 c0,0.748,0.607,1.355,1.352,1.355c0.747,0,1.354-0.607,1.354-1.355C11.396,11.396,10.788,10.787,10.041,10.787z"></path>
-																</g>
-															</g>
-														</g>
-														<g>
-															<g>
-																<g>
-																	<path d="M15.912,14.644c-1.379,0-2.5-1.122-2.5-2.502c0-1.379,1.121-2.501,2.5-2.501s2.504,1.123,2.504,2.501 C18.416,13.521,17.291,14.644,15.912,14.644z M15.912,10.787c-0.746,0-1.354,0.609-1.354,1.354c0,0.748,0.607,1.355,1.354,1.355 c0.75,0,1.357-0.607,1.357-1.355C17.27,11.396,16.662,10.787,15.912,10.787z"></path>
-																</g>
-															</g>
-														</g>
-														<g>
-															<g>
-																<g>
-																	<path d="M21.781,14.644c-1.377,0-2.501-1.122-2.501-2.502c0-1.379,1.124-2.501,2.501-2.501 c1.382,0,2.503,1.123,2.503,2.501C24.284,13.521,23.163,14.644,21.781,14.644z M21.781,10.787c-0.747,0-1.352,0.609-1.352,1.354 c0,0.748,0.604,1.355,1.352,1.355c0.75,0,1.357-0.607,1.357-1.355C23.139,11.396,22.531,10.787,21.781,10.787z"></path>
-																</g>
-															</g>
-														</g>
-														<g>
-															<g>
-																<g>
-																	<path d="M25.636,32c-0.15,0-0.298-0.058-0.407-0.167l-7.541-7.541H2.504c-0.027,0-0.055-0.004-0.082-0.007 C1.084,24.246,0,23.138,0,21.784V2.503C0,1.125,1.122,0,2.504,0h26.992c1.377,0,2.498,1.122,2.498,2.5v19.212 C31.997,21.733,32,21.759,32,21.784c0,0.026-0.003,0.05-0.006,0.078c-0.035,1.315-1.1,2.381-2.418,2.422 c-0.025,0.003-0.053,0.007-0.08,0.007h-3.285v7.135c0,0.232-0.14,0.441-0.355,0.532C25.783,31.986,25.71,32,25.636,32z M2.572,23.142h15.354c0.153,0,0.299,0.062,0.405,0.169l6.73,6.729v-6.323c0-0.317,0.257-0.575,0.574-0.575h3.79 c0.024-0.001,0.046-0.004,0.07-0.004c0.744,0,1.35-0.603,1.35-1.346c0-0.004,0-0.008,0-0.014V2.508 c0-0.753-0.605-1.359-1.35-1.359H2.504c-0.748,0-1.354,0.608-1.354,1.355v19.281c0,0.745,0.604,1.354,1.349,1.354 C2.525,23.138,2.547,23.141,2.572,23.142z"></path>
-																</g>
-															</g>
-														</g>
+														<path d="M10.041,14.644c-1.379,0-2.501-1.122-2.501-2.502c0-1.379,1.122-2.501,2.501-2.501 s2.504,1.123,2.504,2.501C12.545,13.521,11.42,14.644,10.041,14.644z M10.041,10.787c-0.744,0-1.352,0.609-1.352,1.354 c0,0.748,0.607,1.355,1.352,1.355c0.747,0,1.354-0.607,1.354-1.355C11.396,11.396,10.788,10.787,10.041,10.787z"></path>
 													</g>
 												</g>
-											</svg>
-											<h3>Contact Us</h3>
-										</div>
-									</a>
-								</div>
+											</g>
+											<g>
+												<g>
+													<g>
+														<path d="M15.912,14.644c-1.379,0-2.5-1.122-2.5-2.502c0-1.379,1.121-2.501,2.5-2.501s2.504,1.123,2.504,2.501 C18.416,13.521,17.291,14.644,15.912,14.644z M15.912,10.787c-0.746,0-1.354,0.609-1.354,1.354c0,0.748,0.607,1.355,1.354,1.355 c0.75,0,1.357-0.607,1.357-1.355C17.27,11.396,16.662,10.787,15.912,10.787z"></path>
+													</g>
+												</g>
+											</g>
+											<g>
+												<g>
+													<g>
+														<path d="M21.781,14.644c-1.377,0-2.501-1.122-2.501-2.502c0-1.379,1.124-2.501,2.501-2.501 c1.382,0,2.503,1.123,2.503,2.501C24.284,13.521,23.163,14.644,21.781,14.644z M21.781,10.787c-0.747,0-1.352,0.609-1.352,1.354 c0,0.748,0.604,1.355,1.352,1.355c0.75,0,1.357-0.607,1.357-1.355C23.139,11.396,22.531,10.787,21.781,10.787z"></path>
+													</g>
+												</g>
+											</g>
+											<g>
+												<g>
+													<g>
+														<path d="M25.636,32c-0.15,0-0.298-0.058-0.407-0.167l-7.541-7.541H2.504c-0.027,0-0.055-0.004-0.082-0.007 C1.084,24.246,0,23.138,0,21.784V2.503C0,1.125,1.122,0,2.504,0h26.992c1.377,0,2.498,1.122,2.498,2.5v19.212 C31.997,21.733,32,21.759,32,21.784c0,0.026-0.003,0.05-0.006,0.078c-0.035,1.315-1.1,2.381-2.418,2.422 c-0.025,0.003-0.053,0.007-0.08,0.007h-3.285v7.135c0,0.232-0.14,0.441-0.355,0.532C25.783,31.986,25.71,32,25.636,32z M2.572,23.142h15.354c0.153,0,0.299,0.062,0.405,0.169l6.73,6.729v-6.323c0-0.317,0.257-0.575,0.574-0.575h3.79 c0.024-0.001,0.046-0.004,0.07-0.004c0.744,0,1.35-0.603,1.35-1.346c0-0.004,0-0.008,0-0.014V2.508 c0-0.753-0.605-1.359-1.35-1.359H2.504c-0.748,0-1.354,0.608-1.354,1.355v19.281c0,0.745,0.604,1.354,1.349,1.354 C2.525,23.138,2.547,23.141,2.572,23.142z"></path>
+													</g>
+												</g>
+											</g>
+										</g>
+									</g></svg>
+								<h3>Contact Us</h3>
+								<p class="btn">Contact Us</p>
+
 							</div>
 							<div class="grid-cell u-small-1-2 u-medium-1-2 u-large-1-4">
 								<div class="section--apply__unit">
-									<a href="https://www.bethel.edu/admissions/request-info">
-										<div class="center">
+
 											<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
 												<g data-iconmelon="Simple Line Icons:a81d01ae63bd49a496b3a94123bfcaec" id="mail">
 													<g>
@@ -63,14 +62,13 @@
 											</svg>
 											
 											<h3>Request Info</h3>
+											<p class="btn">Request Info</p>
 										</div>
-									</a>
-								</div>
+
 							</div>
 							<div class="grid-cell u-small-1-2 u-medium-1-2 u-large-1-4">
 								<div class="section--apply__unit">
-									<a href="https://www.bethel.edu/admissions/visit">
-										<div class="center">
+
 											<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
 												<g data-iconmelon="Streamline Icon Set:f2ad77ff5aac84e660d36d2b8a91449e" id="map-pin">
 													<g id="Expanded">
@@ -87,14 +85,13 @@
 											</svg>
 											
 											<h3>Visit</h3>
-										</div>
-									</a>
+											<p class="btn">Contact Us</p>
+
 								</div>
 							</div>
 							<div class="grid-cell u-small-1-2 u-medium-1-2 u-large-1-4">
 								<div class="section--apply__unit">
-									<a href="https://www.bethel.edu/admissions/apply/">
-										<div class="center">
+
 											<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
 												<g data-iconmelon="Streamline Icon Set:5541559726ac4fe755565839637c8bcd" id="edit-modify">
 													<g id="Expanded">
@@ -117,9 +114,9 @@
 											</svg>
 											
 											<h3>Apply</h3>
+											<p class="btn">Apply</p>
 										</div>
-									</a>
-								</div>
+
 							</div>
 						</div>
 					</div>
