--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -8,12 +8,56 @@ pageTitle: Test title
 
     {{> section--apply }}
 
-    {{> request-info }}
+    {{> section--find-program }}
+
+    {{> section--request-info }}
+
+    {{!-- {{> request-info }} --}}
+
+    <section class="grid-section  mv6">
+        <div class="inner">
+
+            <div class="grid">
+                <div class="grid-cell  mb4">
+                    <div class="medium-grid-pad-1x">
+
+                            <div class="quote">
+                                <div class="quote__avatar">
+                                    <img  class="lazyload" data-src="https://cdn2.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_lin-chin-chin.jpg" style="opacity: 1;" title="">
+                                </div>
+
+                                <div class="quote__text">
+                                    <p>While interviewing with a Bethel alum for a position at UnitedHealth Group, the interviewer asked me to consider joining the International Audit department instead of the position for which I had applied. At the time, I had next to no idea what working in International Audit entailed! That same Bethel alum also connected me to the Healthcare Reform opportunity three years later. So, it’s safe to say that my career path was undeniably influenced by Bethel and this wonderful alum who decided to take a chance on me – not just once, but twice.</p>
+                                    <cite class="quote__source">–Chin-Chin Lin</cite>
+                                </div>
+                            </div>
+
+                    </div>
+                </div>
+                <div class="grid-cell">
+                    <div class="medium-grid-pad-1x">
+
+                        <div class="quote">
+                            <div class="quote__avatar">
+                                <img  class="lazyload" data-src="https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_nettleton-nicole.jpg" style="opacity: 1;">
+                            </div>
+                            <div class="quote__text">
+                                <p>Bethel really prepared me...having a liberal arts education was beneficial because it made me well rounded.[Businesses] look for people with all sorts of different backgrounds and leadership experience. Bethel encourages people to get involved.</p>
+                                <cite class="quote__source">–Nicole (Nettleton) Willenbring</cite>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
     <section class="grid-section  mv6">
         <div class="inner">
             <div class="grid">
-                <div class="grid-cell u-medium-1-2  pr4@medium">
+                <div class="grid-cell u-medium-1-2  pr4@medium  mb4">
                     <div class="medium-grid-pad-1x">{{> news }}</div>
                 </div>
                 <div class="grid-cell">
@@ -23,7 +67,7 @@ pageTitle: Test title
         </div>
     </section>
 
-    <section class="grid-section  mv6">
+{{!--     <section class="grid-section  mv6">
         <div class="inner">
 
             <div class="grid">
@@ -36,4 +80,5 @@ pageTitle: Test title
             </div>
 
         </div>
-    </section>
+    </section> --}}
+
