--- a/src/templates/partials/section--apply.hbs
+++ b/src/templates/partials/section--apply.hbs
@@ -7,11 +7,17 @@
 				<!-- html-block Blocks/Raw HTML -->
 				<section class="section--apply">
 					<div class="inner">
-						<h2 class="beta  mb1">A snappy title thing here</h2>
-						<p class="mb4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident labore a accusantium iste ullam recusandae exercitationem architecto ab nemo adipisci, temporibus, neque voluptas dolorum distinctio molestias veritatis aliquam fugit excepturi. Quod harum animi voluptatum voluptates atque placeat beatae illum dolor corporis, quasi deserunt dignissimos consectetur itaque, illo debitis sint. Dolore inventore eaque qui molestias nisi nam, minus obcaecati nesciunt perspiciatis?</p>
-						
+						<div class="grid  grid--center">
+							<div class="grid-cell u-medium-2-3">
+							<div class="small-grid-pad-2x  medium-grid-pad-2x">
+						<h2 class="beta  mb1  center  fw300">See yourself here.</h2>
+						<p class="h3  mb4 fw400">With 9,783 majors, 2,000 programs, 3,000 student-led clubs, extracirricular activities and intramural sports, there is something at Bethel for you. Our community is our best feature, and we hope you think so too.</p>
+						</div>
+						</div>
+						</div>
+
 						<div class="grid  grid--wrap">
-							<div class="grid-cell u-small-1-2 u-medium-1-2 u-large-1-4">
+							<div class="grid-cell u-medium-1-2  pv2  ph2  ph5@medium">
 
 								<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
 									<g data-iconmelon="Simple Line Icons:fb184cb4fb59727d7839f79c7a826661" id="bubble-speach">
@@ -47,10 +53,13 @@
 										</g>
 									</g></svg>
 								<h3>Contact Us</h3>
-								<p class="btn">Contact Us</p>
+								<p>Finding the right university can be a challenge, and we want you to know that we are here to help with any questions or concerns you may have. No question is too big or too small.</p> 
+								<p class="h4"><a>651.638.8500</a></p>
+								<p class="h4"><a>contact@bethel.edu</a></p>
+								{{!-- <p class="btn mt2">Contact Us</p> --}}
 
 							</div>
-							<div class="grid-cell u-small-1-2 u-medium-1-2 u-large-1-4">
+{{!-- 							<div class="grid-cell u-medium-1-2  pv2  ph2  ph5@medium">
 								<div class="section--apply__unit">
 
 											<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
@@ -60,13 +69,23 @@
 													</g>
 												</g>
 											</svg>
-											
-											<h3>Request Info</h3>
-											<p class="btn">Request Info</p>
+
+											<h2>Request Info</h2>
+											<form action="">
+												<input type="text" placeholder="Name"><br>
+												<input type="text" placeholder="Email"><br>
+												<select name="Degree type" id="">
+													<option value="Degree type">Degree Type</option>
+													<option id="bachelors" value="Bachelors">Bachelors</option>
+													<option value="Bachelors">Masters</option>
+													<option value="Bachelors">Doctorate</option>
+												</select><br>
+												<btn class="btn  mt1">Get Started!</btn>
+											</form>
 										</div>
 
-							</div>
-							<div class="grid-cell u-small-1-2 u-medium-1-2 u-large-1-4">
+							</div> --}}
+							<div class="grid-cell u-medium-1-2  pv2  ph2  ph5@medium">
 								<div class="section--apply__unit">
 
 											<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
@@ -85,11 +104,12 @@
 											</svg>
 											
 											<h3>Visit</h3>
-											<p class="btn">Contact Us</p>
+											<p>We think our campus is one of our best features and we'd love to show it to you. Come during one of our campus visit events or schedule your own tour.
+											<p><button class="btn mt2  mr1" jtype="submit">See events</button><button class="btn  mt2" jtype="submit">Schedule a visit</button></p>
 
 								</div>
 							</div>
-							<div class="grid-cell u-small-1-2 u-medium-1-2 u-large-1-4">
+{{!-- 							<div class="grid-cell u-medium-1-2  pv2  ph2  ph5@medium">
 								<div class="section--apply__unit">
 
 											<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
@@ -116,8 +136,7 @@
 											<h3>Apply</h3>
 											<p class="btn">Apply</p>
 										</div>
-
-							</div>
+							</div> --}}
 						</div>
 					</div>
 				</section>
