--- a/src/css/base/utils.css
+++ b/src/css/base/utils.css
@@ -23,6 +23,14 @@
 	background-color: $bethel--yellow;
 }
 
+.bkg--gradient-blue-yellow {
+	background: linear-gradient(-150deg, $bethel--blue, 70%, $bethel--yellow);
+}
+
+.bkg--gradient-navy-blue {
+	background: linear-gradient(-150deg, $bethel--navy, $bethel--blue);
+}
+
 
 .vh110 {
 	height: 110vh;
