--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -5,16 +5,15 @@ pageTitle: Test title
 ---
 
 
+    {{> section--find-program }}
 
     {{> section--apply }}
-
-    {{> section--find-program }}
 
     {{> section--request-info }}
 
     {{!-- {{> request-info }} --}}
 
-    <section class="grid-section  mv6">
+    <section class="grid-section  pv6  ma0  bkg--white">
         <div class="inner">
 
             <div class="grid">
