--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -1,8 +1,9 @@
-<div class="flickity  js-rotate-order-carousel carousel--text-over-media">
+<div class="js-rotate-order-carousel carousel--text-over-media">
 
 {{#each movingPic}}
+    {{#if this.show}}
 
-    <div class="flickity--cell">
+    <div class="">
         <div class="ratio-box">
             <div class="moving-picture">
                 <div class="moving-picture__media">
@@ -30,7 +31,7 @@
             </div>
         </div>
     </div>
-
+    {{/if}}
 {{/each}}
 
 </div>
