--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -1,4 +1,4 @@
-<section class="grid-section  mt0  pv6  bkg--navy">
+<section class="grid-section  mt0  pv6  bkg--gradient-blue-yellow">
 	<div class="inner">
 		<div class="grid  grid--center">
 			<div class="grid-cell">
