--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -1,26 +1,37 @@
-<section class="grid-section  mt0  pv6">
+<section class="grid-section  mt0   pv6--medium  bkg--gradient-navy-blue">
 	<div class="inner">
-		<div class="grid  grid--center  mv6">
+		<div class="grid  grid--center  mv3 ">
 			<div class="grid-cell">
 				<div class="medium-grid-pad-1x">
-					<h3 class="alpha  mb2  center  fw300">Find your program</h3>
+					<h3 class="beta  mb1  mb2--medium  center  fw300">Find your program</h3>
 					<form class="form--find-program">
-						<fieldset>
-							<input type="radio" value="" checked="true"> All</input>
-							<input type="radio" value=""> Bachelors</input>
-							<input type="radio" value=""> Masters</input>
-							<input type="radio" value=""> Doctorate</input>
-						</fieldset>
-						<fieldset>
-							<input type="checkbox" checked="true"> Campus</input>
-							<input type="checkbox" checked="true"> Online</input>
-							<input type="checkbox" checked="true"> Evening</input>
-						</fieldset>
-						<fieldset>
-							<input type="search" placeholder="Search">
-						</fieldset>
+						<div class="search--program">
+							<input  type="search" placeholder="Search for your program">
+							<button class="btn  btn-yellow">Find programs</button>
+						</div>
+						<div class="grid">
+							<div class="grid-cell">
+								<div class="grid-pad-2x">
+									<h4>Degree Type</h4>
+									<label><input type="radio" value="" checked="true"> All</label>
+									<label><input type="radio" value=""> Bachelors</label>
+									<label><input type="radio" value=""> Masters</label>
+									<label><input type="radio" value=""> Doctorate</label>
+								</div>
+							</div>
+							<div class="grid-cell">
+								<div class="grid-pad-2x">
+									<h4>Delivery type</h4>
+									<label><input type="checkbox" checked="true"> Campus</label>
+									<label><input type="checkbox" checked="true"> Online</label>
+									<label><input type="checkbox" checked="true"> Evening</label>
+								</div>
+							</div>
+						</div>
+						
 					</form>
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
+</section>
