--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -1,13 +1,13 @@
-<section class="grid-section  mt0   pv6--medium  bkg--gradient-navy-blue">
+<section class="grid-section  section--find-program  mt0  pv6--medium  bkg--navy">
 	<div class="inner">
-		<div class="grid  grid--center  mv3 ">
+		<div class="grid  grid--center  mt3  mb6  pb6">
 			<div class="grid-cell">
 				<div class="medium-grid-pad-1x">
 					<h3 class="beta  mb1  mb2--medium  center  fw300">Find your program</h3>
 					<form class="form--find-program">
 						<div class="search--program">
 							<input  type="search" placeholder="Search for your program">
-							<button class="btn  btn-yellow">Find programs</button>
+							<button class="btn">Find programs</button>
 						</div>
 						<div class="grid">
 							<div class="grid-cell">
