--- a/src/css/enhance/proof-points.css
+++ b/src/css/enhance/proof-points.css
@@ -1,14 +1,16 @@
 .proof-points {
-    color: #fff;
+    /* color: #fff; */
     font-family: $gotham;
 
     .grid-cell {
-        background: $bethel--navy;
-        padding: 1em;
-        border-radius: 5px;
-        margin: 1em;
+        background-color: #fff;
+        padding: 3em 1em;
+        border-radius: .5em;
+        margin: 1em 0;
+        border: 1px solid #ddd;
 
         @mixin respond-min $medium {
+            margin: 1em;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -26,7 +28,7 @@
 
 .proof-point__text {
     margin-bottom: .75em;
-    color: rgba(255,255,255, .8);
+    /* color: rgba(255,255,255, .8); */
     /*font-family: "Helvetica Neue",Helvetica,Arial,sans;*/
     text-align: center;
 }
@@ -34,13 +36,13 @@
 .proof-point__number {
     font-size: 2.5rem;
     line-height: 1;
-    color: #fff;
+    /* color: #fff; */
     display: flex;
     justify-content: center;
     align-items: center;
 
     @mixin respond-min $medium {
-    	font-size: 3rem;
+    	font-size: 5rem;
     }
 }
 
@@ -50,5 +52,5 @@
 
 .proof-point__cite {
     font-size: .8rem;
-    color: rgba(255,255,255, .8);
+    /* color: rgba(255,255,255, .8); */
 }
