--- a/src/css/modules/moving-picture.css
+++ b/src/css/modules/moving-picture.css
@@ -80,11 +80,10 @@
 	font-family: $gotham;
 	z-index: 1;
 	padding: 1em 2.5em;
-	/* text-align: center; */
 
 	@mixin respond-min $medium {
 		position: absolute;
-		/* left: 12.5%; */
+		left: 0;
 		bottom: 0;
 		width: 75%;
 		padding: 5% 8%;
@@ -96,8 +95,8 @@
 
 .moving-picture__overlay__headline {
 	font-size: 1.5em;
-	 margin: 0;
-	font-weight: 500;
+	/* margin: 0;*/
+	font-weight: 300;
 	letter-spacing: .02em;
 
 	@mixin respond-min $medium {
@@ -112,7 +111,6 @@
 .moving-picture__overlay__teaser {
 	display: none;
 	margin-top: .75em;
-	color: $bethel--yellow;
 
 	@mixin respond-min $large {
 		display: block;
