--- a/src/templates/partials/request-info.hbs
+++ b/src/templates/partials/request-info.hbs
@@ -3,7 +3,7 @@
 		<div class="grid  grid--center">
 			<div class="grid-cell  u-medium-1-2">
 				<div class="medium-grid-pad-1x">
-					<h2>Request Info</h2>
+					<h2 class="beta">Request Info</h2>
 					<form action="">
 						<input type="text" placeholder="First Name"><br>
 						<input type="text" placeholder="Last Name"><br>
