--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -1,12 +1,21 @@
-<section class="grid-section  section--find-program  mt0  pv6--medium  bkg--navy">
+<section class="grid-section  section--find-program  mt0  pv6--medium">
 	<div class="inner">
-		<div class="grid  grid--center  mt3  mb6  pb6">
+		<div class="grid  grid--center  mt3  mb6--medium  pb3 pb6--medium">
 			<div class="grid-cell">
 				<div class="medium-grid-pad-1x">
-					<h3 class="beta  mb1  mb2--medium  center  fw300">Find your program</h3>
+
+					<div class="grid  grid--center">
+						<div class="grid-cell u-medium-1-1">
+							<div class="medium-grid-pad-1x">
+								<h2 class="beta  mb1  center  fw300">Find your major or program</h2>
+								<p class="h4  mb2  mb3--medium  fw400">We offer more than 100 areas of study for recent high school graduates, as well as a range of programs for graduate and seminary students and adults who want to start or finish their degree. Use our program search to find and compare majors, degrees, certificates, and licenses. Just enter a major, program name, or area of interest in the search box (for example, education, business, ministry, science, music, nursing).</p>
+							</div>
+						</div>
+					</div>
+
 					<form class="form--find-program">
 						<div class="search--program">
-							<input  type="search" placeholder="Search for your program">
+							<input type="search" placeholder="Search for your program">
 							<button class="btn">Find programs</button>
 						</div>
 						<div class="grid">
@@ -23,8 +32,8 @@
 								<div class="grid-pad-2x">
 									<h4>Delivery type</h4>
 									<label><input type="checkbox" checked="true"> Campus</label>
+									{{!-- <label><input type="checkbox" checked="true"> Evening</label> --}}
 									<label><input type="checkbox" checked="true"> Online</label>
-									<label><input type="checkbox" checked="true"> Evening</label>
 								</div>
 							</div>
 						</div>
