--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -6,6 +6,7 @@ pageTitle: Test title
 
     {{> section--find-program }}
     {{> section--apply }}
+    {{> section--contact-visit }}
     {{> section--request-info }}
 
     <section class="grid-section  pv6  ma0  bkg--white">
@@ -21,7 +22,7 @@ pageTitle: Test title
                                 </div>
 
                                 <div class="quote__text">
-                                    <p>While interviewing with a Bethel alum for a position at UnitedHealth Group, the interviewer asked me to consider joining the International Audit department instead of the position for which I had applied. At the time, I had next to no idea what working in International Audit entailed! That same Bethel alum also connected me to the Healthcare Reform opportunity three years later. So, it’s safe to say that my career path was undeniably influenced by Bethel and this wonderful alum who decided to take a chance on me – not just once, but twice.</p>
+                                    <p>While interviewing with a Bethel alum for a position at UnitedHealth Group, the interviewer asked me to consider joining the International Audit department instead of the position for which I had applied.</p>
                                     <cite class="quote__source">–Chin-Chin Lin</cite>
                                 </div>
                             </div>
@@ -56,7 +57,7 @@ pageTitle: Test title
     </section>
 
 
-    <section class="grid-section  mv6">
+    <section class="grid-section  pv6  bkg--white">
         <div class="inner">
             <div class="grid">
                 <div class="grid-cell u-medium-1-2  pr4@medium  mb4">
