--- a/src/templates/partials/section--apply.hbs
+++ b/src/templates/partials/section--apply.hbs
@@ -1,4 +1,4 @@
-<section class="grid-section  mt0  pv6  bkg--white">
+<section class="grid-section  mt0  pv6  bkg--yellow">
 	<div class="grid false">
 		<!-- flex-layout-block 140 -->
 
@@ -7,136 +7,23 @@
 				<!-- html-block Blocks/Raw HTML -->
 				<section class="section--apply">
 					<div class="inner">
-						<div class="grid  grid--center">
-							<div class="grid-cell u-medium-2-3">
-							<div class="small-grid-pad-2x  medium-grid-pad-2x">
-						<h2 class="beta  mb1  center  fw300">See yourself here.</h2>
-						<p class="h3  mb2  mb4--medium  fw400">With 9,783 majors, 2,000 programs, 3,000 student-led clubs, extracirricular activities and intramural sports, there is something at Bethel for you. Our community is our best feature, and we hope you think so too.</p>
-						</div>
-						</div>
-						</div>
-
-						<div class="grid  grid--wrap">
-							<div class="grid-cell u-medium-1-2  pv2  ph2  ph5@medium">
-
-								<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
-									<g data-iconmelon="Simple Line Icons:fb184cb4fb59727d7839f79c7a826661" id="bubble-speach">
-										<g>
-											<g>
-												<g>
-													<g>
-														<path d="M10.041,14.644c-1.379,0-2.501-1.122-2.501-2.502c0-1.379,1.122-2.501,2.501-2.501 s2.504,1.123,2.504,2.501C12.545,13.521,11.42,14.644,10.041,14.644z M10.041,10.787c-0.744,0-1.352,0.609-1.352,1.354 c0,0.748,0.607,1.355,1.352,1.355c0.747,0,1.354-0.607,1.354-1.355C11.396,11.396,10.788,10.787,10.041,10.787z"></path>
-													</g>
-												</g>
-											</g>
-											<g>
-												<g>
-													<g>
-														<path d="M15.912,14.644c-1.379,0-2.5-1.122-2.5-2.502c0-1.379,1.121-2.501,2.5-2.501s2.504,1.123,2.504,2.501 C18.416,13.521,17.291,14.644,15.912,14.644z M15.912,10.787c-0.746,0-1.354,0.609-1.354,1.354c0,0.748,0.607,1.355,1.354,1.355 c0.75,0,1.357-0.607,1.357-1.355C17.27,11.396,16.662,10.787,15.912,10.787z"></path>
-													</g>
-												</g>
-											</g>
-											<g>
-												<g>
-													<g>
-														<path d="M21.781,14.644c-1.377,0-2.501-1.122-2.501-2.502c0-1.379,1.124-2.501,2.501-2.501 c1.382,0,2.503,1.123,2.503,2.501C24.284,13.521,23.163,14.644,21.781,14.644z M21.781,10.787c-0.747,0-1.352,0.609-1.352,1.354 c0,0.748,0.604,1.355,1.352,1.355c0.75,0,1.357-0.607,1.357-1.355C23.139,11.396,22.531,10.787,21.781,10.787z"></path>
-													</g>
-												</g>
-											</g>
-											<g>
-												<g>
-													<g>
-														<path d="M25.636,32c-0.15,0-0.298-0.058-0.407-0.167l-7.541-7.541H2.504c-0.027,0-0.055-0.004-0.082-0.007 C1.084,24.246,0,23.138,0,21.784V2.503C0,1.125,1.122,0,2.504,0h26.992c1.377,0,2.498,1.122,2.498,2.5v19.212 C31.997,21.733,32,21.759,32,21.784c0,0.026-0.003,0.05-0.006,0.078c-0.035,1.315-1.1,2.381-2.418,2.422 c-0.025,0.003-0.053,0.007-0.08,0.007h-3.285v7.135c0,0.232-0.14,0.441-0.355,0.532C25.783,31.986,25.71,32,25.636,32z M2.572,23.142h15.354c0.153,0,0.299,0.062,0.405,0.169l6.73,6.729v-6.323c0-0.317,0.257-0.575,0.574-0.575h3.79 c0.024-0.001,0.046-0.004,0.07-0.004c0.744,0,1.35-0.603,1.35-1.346c0-0.004,0-0.008,0-0.014V2.508 c0-0.753-0.605-1.359-1.35-1.359H2.504c-0.748,0-1.354,0.608-1.354,1.355v19.281c0,0.745,0.604,1.354,1.349,1.354 C2.525,23.138,2.547,23.141,2.572,23.142z"></path>
-													</g>
-												</g>
-											</g>
-										</g>
-									</g></svg>
-								<h3 class="h2">Contact Us</h3>
-								<p>Finding the right university can be a challenge, and we want you to know that we are here to help with any questions or concerns you may have. No question is too big or too small.</p> 
-								<p class="h4"><a href="tel:6516388500">651.638.8500</a></p>
-								<p class="h4"><a href="mailto:contact@bethel.edu">contact@bethel.edu</a></p>
-								{{!-- <p class="btn mt2">Contact Us</p> --}}
-
-							</div>
-{{!-- 							<div class="grid-cell u-medium-1-2  pv2  ph2  ph5@medium">
-								<div class="section--apply__unit">
-
-											<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
-												<g data-iconmelon="Simple Line Icons:a81d01ae63bd49a496b3a94123bfcaec" id="mail">
-													<g>
-														<path d="M31.945,0.444c-0.02-0.075-0.035-0.135-0.081-0.198c-0.046-0.061-0.1-0.093-0.165-0.13 c-0.043-0.027-0.062-0.076-0.112-0.091c-0.03-0.009-0.056,0.013-0.085,0.008s-0.046-0.031-0.076-0.031H0.574 c-0.029,0-0.047,0.026-0.076,0.031S0.444,0.015,0.414,0.024C0.363,0.04,0.344,0.088,0.301,0.116 c-0.064,0.037-0.119,0.069-0.164,0.13C0.09,0.309,0.074,0.369,0.056,0.444C0.043,0.49,0,0.524,0,0.575v30.85 c0,0.316,0.258,0.574,0.574,0.574h30.852c0.317,0,0.574-0.258,0.574-0.574V0.575C32,0.524,31.957,0.49,31.945,0.444z M16,14.645 c0,0,0.002,0.002,0.006,0.002s0.008,0.002,0.012,0.002c0.354,0.004,0.688,0.142,0.939,0.393c0.256,0.254,0.397,0.596,0.397,0.958 c0,0.359-0.142,0.701-0.397,0.957c-0.511,0.511-1.403,0.511-1.914,0c-0.527-0.527-0.527-1.388,0-1.915 C15.298,14.786,15.64,14.645,16,14.645z M16.006,13.499c-0.036,0-0.057,0.031-0.09,0.039c-0.456,0.013-0.884,0.174-1.27,0.423 v-1.244h2.708v1.016C16.927,13.593,16.477,13.499,16.006,13.499z M14.646,11.568v-1.236c0.405,0.27,0.856,0.456,1.354,0.456 c0.498,0,0.948-0.186,1.354-0.456v1.236H14.646z M15.043,7.328C15.298,7.074,15.64,6.932,16,6.932c0.361,0,0.701,0.142,0.957,0.396 c0.256,0.255,0.397,0.598,0.397,0.958c0,0.361-0.142,0.702-0.397,0.958c-0.511,0.51-1.403,0.51-1.914,0 C14.516,8.716,14.516,7.855,15.043,7.328z M18.502,8.286c0-0.668-0.259-1.296-0.732-1.769c-0.946-0.947-2.592-0.947-3.537,0 c-0.486,0.486-0.729,1.123-0.731,1.762c0,0.002-0.003,0.005-0.003,0.006v3.283H5.887c-0.826,0-1.718-0.668-1.947-1.459l-2.6-8.96 h29.321l-2.601,8.96c-0.23,0.791-1.121,1.459-1.946,1.459h-7.612V8.286z M1.148,30.851V4.612l1.688,5.815 c0.373,1.285,1.713,2.29,3.051,2.29h7.611V16c0,0.002,0.003,0.004,0.003,0.006c0.003,0.639,0.245,1.275,0.731,1.764 c0.472,0.472,1.1,0.732,1.768,0.732s1.295-0.261,1.77-0.732c0.474-0.474,0.732-1.102,0.732-1.77v-0.172 c0.48,0.57,0.781,1.296,0.781,2.099c0,0.317,0.256,0.575,0.574,0.575c0.316,0,0.572-0.258,0.572-0.575 c0-1.516-0.766-2.852-1.928-3.649v-1.561h7.612c1.338,0,2.678-1.004,3.049-2.29l1.688-5.815v26.239H1.148z"></path>
-													</g>
-												</g>
-											</svg>
-
-											<h2>Request Info</h2>
-											<form action="">
-												<input type="text" placeholder="Name"><br>
-												<input type="text" placeholder="Email"><br>
-												<select name="Degree type" id="">
-													<option value="Degree type">Degree Type</option>
-													<option id="bachelors" value="Bachelors">Bachelors</option>
-													<option value="Bachelors">Masters</option>
-													<option value="Bachelors">Doctorate</option>
-												</select><br>
-												<btn class="btn  mt1">Get Started!</btn>
-											</form>
-										</div>
-
-							</div> --}}
-							<div class="grid-cell u-medium-1-2  pv2  ph2  ph5@medium">
-								<div class="section--apply__unit">
-
-									<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
-										<g data-iconmelon="Streamline Icon Set:f2ad77ff5aac84e660d36d2b8a91449e" id="map-pin">
-											<g id="Expanded">
-												<g>
-													<g>
-														<path d="M16,32l-0.552-0.797C15.034,30.602,5.279,16.416,5.279,10.721C5.279,4.81,10.089,0,16,0 s10.721,4.81,10.721,10.721c0,5.695-9.755,19.881-10.169,20.482L16,32z M16,1.34c-5.173,0-9.38,4.208-9.38,9.381 c0,4.548,7.293,15.783,9.38,18.904c2.087-3.121,9.381-14.356,9.381-18.904C25.381,5.548,21.173,1.34,16,1.34z"></path>
-													</g>
-													<g>
-														<path d="M16,15.411c-2.585,0-4.69-2.104-4.69-4.69S13.415,6.03,16,6.03c2.586,0,4.69,2.104,4.69,4.69 S18.586,15.411,16,15.411z M16,7.371c-1.847,0-3.35,1.503-3.35,3.35c0,1.848,1.503,3.351,3.35,3.351 c1.848,0,3.351-1.503,3.351-3.351C19.351,8.874,17.848,7.371,16,7.371z"></path>
-													</g>
-												</g>
-											</g>
-										</g>
-									</svg>
-									
-									<h3 class="h2">Visit</h3>
-									<p>We think our campus is one of our best features and we'd love to show it to you. Come during one of our campus visit events or schedule your own tour.
-									<p><button class="btn mt2  mr1" jtype="submit">See events</button><button class="btn  mt2" jtype="submit">Schedule a visit</button></p>
-
+						<div class="grid">
+							<div class="grid-cell u-medium-3-5">
+								<div class="medium-grid-pad-2x">
+									<img src="assets/images/macbook.png">
 								</div>
 							</div>
-{{!-- 							<div class="grid-cell u-medium-1-2  pv2  ph2  ph5@medium">
-								<div class="section--apply__unit">
+							<div class="grid-cell u-medium-2-5">
+								<div class="small-grid-pad-2x  medium-grid-pad-2x">
+									<h2 class="beta  fw500">Apply Now</h2>
+									<p class="h3  mb2  fw300">We try to make the application process as easy as possible. The whole process can take you less than 30 minutes!</p>
+									<p><a class="btn">Start your application</a></p>
+								</div>
+							</div>
+						</div>
 
-											<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
-												<g data-iconmelon="Streamline Icon Set:5541559726ac4fe755565839637c8bcd" id="edit-modify">
-													<g id="Expanded">
-														<g>
-															<g>
-																<path d="M24.666,32H0V2.667h19.332c0.368,0,0.667,0.299,0.667,0.666C19.999,3.701,19.7,4,19.332,4H1.333v26.666 h21.999V16c0-0.368,0.299-0.667,0.667-0.667s0.667,0.299,0.667,0.667V32z"></path>
-															</g>
-															<g>
-																<path d="M14.667,11.333"></path>
-															</g>
-															<g>
-																<path d="M14.424,18.242c-0.173,0-0.344-0.067-0.472-0.195c-0.203-0.203-0.254-0.513-0.125-0.77l1.885-3.771 c0.032-0.064,0.074-0.123,0.125-0.174L28.565,0.604C28.961,0.209,29.443,0,29.959,0c0.809,0,1.568,0.522,1.89,1.3 c0.308,0.743,0.139,1.54-0.454,2.133L18.666,16.16c-0.051,0.051-0.109,0.094-0.173,0.126l-3.771,1.886 C14.627,18.22,14.526,18.242,14.424,18.242z M16.858,14.198l-0.943,1.886l1.886-0.943L30.452,2.49 c0.21-0.21,0.266-0.438,0.167-0.681c-0.114-0.271-0.397-0.477-0.66-0.477c-0.157,0-0.309,0.072-0.451,0.214L16.858,14.198z"></path>
-															</g>
-															<g>
-																<path d="M29.037,5.514c-0.171,0-0.342-0.065-0.472-0.195L26.68,3.433c-0.26-0.261-0.26-0.683,0-0.943 c0.261-0.26,0.683-0.26,0.943,0l1.885,1.886c0.261,0.261,0.261,0.683,0,0.943C29.378,5.449,29.207,5.514,29.037,5.514z"></path>
-															</g>
-														</g>
-													</g>
-												</g>
-											</svg>
-											
-											<h3>Apply</h3>
-											<p class="btn">Apply</p>
-										</div>
-							</div> --}}
+
+
 						</div>
 					</div>
 				</section>
