--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -1,9 +1,9 @@
-<section class="grid-section  mt0  pv6  bkg--gradient-blue-yellow">
+<section class="grid-section  mt0  pv6  bkg--gradient-navy-blue">
 	<div class="inner">
 		<div class="grid  grid--center">
 			<div class="grid-cell">
 				<div class="medium-grid-pad-1x">
-					<h3 class="alpha  mb2  center  fw300" style="color: #fff">Request information</h3>
+					<h3 class="beta  mb2  center  fw300" style="color: #fff">Request information</h3>
 					<form class="form--request-info">
 					<blockquote class="center">
 						<fieldset>
