updating search description

--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -8,7 +8,7 @@
 						<div class="grid-cell u-medium-1-1">
 							<div class="medium-grid-pad-1x">
 								<h2 class="beta  mb1  center  fw300">Find your major or program</h2>
-								<p class="h4  mb2  mb3--medium  fw400">We offer more than 100 areas of study for recent high school graduates, as well as a range of programs for graduate and seminary students and adults who want to start or finish their degree. Use our program search to find and compare majors, degrees, certificates, and licenses. Just enter a major, program name, or area of interest in the search box (for example, education, business, ministry, science, music, nursing).</p>
+								<p class="h4  mb2  mb3--medium  fw400">We offer more than 100 areas of study for undergrads, as well as programs for adult undergrad, graduate, and seminary students. Enter a career or area of interest to find and compare majors, programs, certificates, and licenses.</p>
 							</div>
 						</div>
 					</div>
